// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentDialog render testing in close status should render well while comments existed 1`] = `null`;

exports[`CommentDialog render testing in close status should render well while no comment existed 1`] = `null`;

exports[`CommentDialog render testing in open status should render well while comments existed 1`] = `
<div
  className="ant-modal-root"
>
  <div
    className="ant-modal-mask"
    style={
      Object {
        "zIndex": undefined,
      }
    }
  />
  <div
    className="ant-modal-wrap"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "display": null,
        "zIndex": undefined,
      }
    }
    tabIndex={-1}
  >
    <div
      aria-labelledby="test-id"
      aria-modal="true"
      className="ant-modal"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="dialog"
      style={
        Object {
          "width": 520,
        }
      }
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "height": 0,
            "outline": "none",
            "overflow": "hidden",
            "width": 0,
          }
        }
        tabIndex={0}
      />
      <div
        className="ant-modal-content"
      >
        <div
          className="ant-modal-header"
        >
          <div
            className="ant-modal-title"
            id="test-id"
          >
            <div
              className="css-rxdnkl-CommentDialog"
            >
              <div>
                <button
                  aria-checked={false}
                  className="ant-switch"
                  data-testid="resolved-switch"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="switch"
                  type="button"
                >
                  <div
                    className="ant-switch-handle"
                  />
                  <span
                    className="ant-switch-inner"
                  />
                </button>
                <span>
                  Resolved
                </span>
              </div>
              <div
                className="ant-dropdown-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Options
              </div>
            </div>
          </div>
        </div>
        <div
          className="ant-modal-body"
        >
          <div
            className="css-8zdk6e-CommentDialog"
          >
            <div>
              <div
                className="comment-header"
              >
                <div
                  className="comment-name"
                >
                  name
                </div>
                <div
                  className="comment-post-time"
                >
                  postTime
                </div>
              </div>
              <div
                className="comment-message"
              >
                message
              </div>
            </div>
          </div>
          <input
            className="ant-input"
            data-testid="name-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Name"
            style={
              Object {
                "marginBottom": "5px",
              }
            }
            type="text"
            value=""
          />
          <input
            className="ant-input"
            data-testid="message-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Message"
            type="text"
            value=""
          />
        </div>
        <div
          className="ant-modal-footer"
        >
          <button
            className="ant-btn ant-btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            className="ant-btn ant-btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              OK
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "height": 0,
            "outline": "none",
            "overflow": "hidden",
            "width": 0,
          }
        }
        tabIndex={0}
      />
    </div>
  </div>
</div>
`;

exports[`CommentDialog render testing in open status should render well while no comment existed 1`] = `
<div
  className="ant-modal-root"
>
  <div
    className="ant-modal-mask"
    style={
      Object {
        "zIndex": undefined,
      }
    }
  />
  <div
    className="ant-modal-wrap"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "display": null,
        "zIndex": undefined,
      }
    }
    tabIndex={-1}
  >
    <div
      aria-labelledby="test-id"
      aria-modal="true"
      className="ant-modal"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="dialog"
      style={
        Object {
          "width": 520,
        }
      }
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "height": 0,
            "outline": "none",
            "overflow": "hidden",
            "width": 0,
          }
        }
        tabIndex={0}
      />
      <div
        className="ant-modal-content"
      >
        <div
          className="ant-modal-header"
        >
          <div
            className="ant-modal-title"
            id="test-id"
          >
            Add comments
          </div>
        </div>
        <div
          className="ant-modal-body"
        >
          
          <input
            className="ant-input"
            data-testid="name-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Name"
            style={
              Object {
                "marginBottom": "5px",
              }
            }
            type="text"
            value=""
          />
          <input
            className="ant-input"
            data-testid="message-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Message"
            type="text"
            value=""
          />
        </div>
        <div
          className="ant-modal-footer"
        >
          <button
            className="ant-btn ant-btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            className="ant-btn ant-btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span>
              OK
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "height": 0,
            "outline": "none",
            "overflow": "hidden",
            "width": 0,
          }
        }
        tabIndex={0}
      />
    </div>
  </div>
</div>
`;
